decription & styles fix

--- a/index_de.html
+++ b/index_de.html
@@ -529,7 +529,7 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
 
 
 <section class="block-templates" id="modules_config">
-  <h2 class="item4"><i class="icon-cog"></i>Modulkonfiguration</h2>
+  <h2 class="item4"><i class="icon-cog"></i> Modulkonfiguration</h2>
 
     <p>Das Layout von Joomla Website unterteilt ich in zwei wesentliche Bereiche – ein inhaltlicher Teil und Modulpositionen (schauen Sie die unten angegebene Positionskarte an, um mehr zu erfahren). Module werden üblicherweise dazu verwendet, um einen Inhalt  auf die vorbereitete Position auszugeben </p>
   <div id="positions_map">
@@ -1262,7 +1262,7 @@ defined('_JEXEC') or die;
 
 
 <section id="addendum" class="block-templates">
-  <h2 class="item8"><i class="icon-question-sign"></i> Addendum  <small> wo bekomme ich Hilfe, Support und zusätzliche Information</small> </h2>
+  <h2 class="item8"><i class="icon-question-sign"></i> Addendum  <small><i>wo bekomme ich Hilfe, Support und zusätzliche Information</i></small> </h2>
 
   <p> Wir taten unser Bestes, um  diese Anweisungen klar wie möglich zu machen. Wenn Sie jedoch Schwierigkeiten mit dem Joomla Template haben oder Ihre Ideen zur Verbesserung von der Vorlage oder vom Dokumentation vorschlagen möchten, wenden Sie sich bitte an unseren Kundendienst: </p>
   
