--- a/index_en.html
+++ b/index_en.html
@@ -1279,7 +1279,7 @@ defined('_JEXEC') or die;
 
 
 <section id="addendum" class="block-templates">
-  <h2 class="item8"><i class="icon-question-sign"></i> Addendum  <small>where to get help, support and additional information</small> </h2>
+  <h2 class="item8"><i class="icon-question-sign"></i> Addendum  <small><i>where to get help, support and additional information</i></small> </h2>
 
   <p>We did our best to make this documentation as clear as possible. However, if you have any difficulties with the Joomla template or any suggestions on improving the template or the documentation, feel free to contact our support team through the:</p>
   
@@ -1317,7 +1317,7 @@ defined('_JEXEC') or die;
 
       <h5>Can't load jQuery</h5> 
       <ol> 
-      <li></li> 
+      <li>Open \templates\theme****\index.php file</li> 
       <li>Locate the line: 
       <pre>&lt;script src="//ajax.googleapis.com/ajax/libs/jquery/[---your_jquery_version---]/jquery.min.js">&lt;/script></pre></li>
       <li>Replace with the following:<br> 
