--- a/index_es.html
+++ b/index_es.html
@@ -541,7 +541,7 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
 
 
 <section class="block-templates" id="modules_config">
-  <h2 class="item4"><i class="icon-cog"></i>Configuración de Módulos</h2>
+  <h2 class="item4"><i class="icon-cog"></i> Configuración de Módulos</h2>
 
     <p>El diseño web de Joomla se divide en dos partes principales – la sección de contenido y las posiciones de módulo (revise las posiciones de módulo en este documento). Los módulos de Joomla son utilizados para la presentación del contenido en las posiciones preparadas.</p>
 
@@ -1278,7 +1278,7 @@ defined('_JEXEC') or die;
 
 
 <section id="addendum" class="block-templates">
-  <h2 class="item8"><i class="icon-question-sign"></i> Addendum   <small>¿Dónde se puede encontrar ayuda, soporte y infomación adicional? </small> </h2>
+  <h2 class="item8"><i class="icon-question-sign"></i> Addendum   <small><i>¿Dónde se puede encontrar ayuda, soporte y infomación adicional?</i></small> </h2>
 
   <p>Hicimos todo lo posible para que esta documentación sea lo más clara posible. Sin embargo, si Usted tiene alguna dificultad con la plantilla de Joomla o alguna sugerencia sobre la mejora de la plantilla o la documentación, póngase en contacto con nuestro equipo a través de:</p>
   
