--- a/index_fr.html
+++ b/index_fr.html
@@ -964,7 +964,7 @@
 
 
 <section id="extensions" class="block-templates">
-  <h2 class="item8"><i class="icon-fullscreen"></i> Extensions</h2>
+  <h2 class="item5"><i class="icon-fullscreen"></i> Extensions</h2>
 
   <p>La fonctionnalité d'un site web Joomla peut être améliorée en utilisant diverses extensions Joomla. Certaines d'entre elles sont souvent utilisées dans nos modèles. Cette section vous montrera comment utiliser des extensions personnalisées.</p>
 
@@ -1103,7 +1103,7 @@
 </section>
 
 <section id="configuring-pages" class="block-templates">
-  <h2 class="item5"><i class="icon-wrench"></i> Configuration des pages</h2>
+  <h2 class="item6"><i class="icon-wrench"></i> Configuration des pages</h2>
   
     <!-- Gallery page -->
   
@@ -1150,7 +1150,7 @@
 
 
 <section id="template-settings">
-  <h2 class="item6"><i class="icon-cogs"></i> Réglages du modèle</h2>
+  <h2 class="item7"><i class="icon-cogs"></i> Réglages du modèle</h2>
 
   <p>Chaque modèle pour Joomla a ses propres options de configuration. Elles peuvent être ajustées pour configurer des classes d'agencement de thème, des balises typographiques, certaines fonctionnalités additionnelles, etc. Les options du modèle sont accessibles dans la section « <b>Extensions > Gestionnaire de modèles Manager</b> » (« <b>Extensions > Template Manager</b> » du panneau d'administration de Joomla.</p>
 
@@ -1268,7 +1268,7 @@ defined('_JEXEC') or die;
 
 
 <section id="addendum" class="block-templates">
-  <h2 class="item7"><i class="icon-question-sign"></i> Addendum  <small>aide, support, et renseignements supplémentaires</small> </h2>
+  <h2 class="item8"><i class="icon-question-sign"></i> Addendum  <small><i>aide, support, et renseignements supplémentaires</i></small> </h2>
 
   <p>Nous avons fait de notre mieux pour que cette documentation soit aussi claire que possible. Toutefois, si vous avez des difficultés avec un modèle pour Joomla, ou toute suggestion d'amélioration de la documentation ou du modèle, n'hésitez pas à contacter notre équipe de support via :</p>
   
