--- a/index_pl.html
+++ b/index_pl.html
@@ -1269,7 +1269,7 @@ defined('_JEXEC') or die;
 
 
 <section id="addendum" class="block-templates">
-  <h2 class="item8"><i class="icon-question-sign"></i> Aneks  <small> gdzie otrzymać pomoc, wsparcie i dodatkowe informacje</small> </h2>
+  <h2 class="item8"><i class="icon-question-sign"></i> Aneks  <small><i>gdzie otrzymać pomoc, wsparcie i dodatkowe informacje</i></small> </h2>
 
   <p>Staraliśmy się by ta dokumentacja była tak prosta jak to tylko możliwe. Jeśli jednak mielibyście Państwo trudności z szablonem Joomla albo sugestie jak poprawić szablon albo dokumentację to prosimy o kontakt z naszą obsługą poprzez:</p>
   
