--- a/index_pt.html
+++ b/index_pt.html
@@ -1298,7 +1298,7 @@ O efeito de parallax pode ser adicionado ao template com a ajuda do plugin de jQ
 
 
 <section id="addendum" class="block-templates">
-  <h2 class="item8"><i class="icon-question-sign"></i> Apêndice  <small>onde obter ajuda, suporte e informação adicional</small> </h2>
+  <h2 class="item8"><i class="icon-question-sign"></i> Apêndice  <small><i>onde obter ajuda, suporte e informação adicional</i></small> </h2>
 
   <p>Nós demos o nosso melhor para fazer desse documento o mais claro possível. Contudo, se você tiver qualquer dificuldade com um template do Joomla ou quaisquer sugestões com relação à melhoria do template ou documentação, sinta-se livre para entrar em contato com a nossa equipe de suporte através da:</p>
   
