--- a/index_ru.html
+++ b/index_ru.html
@@ -177,7 +177,7 @@
 <!-- block-started
 ================================================== -->
 <section class="block-started"  id="introduction">
-  <h2><i class="icon-info-sign"></i> Введение <small><i>Что находится в шаблоне и для чего его можно использовать</i></small></h2>
+  <h2 class="item1"><i class="icon-info-sign"></i> Введение <small><i>Что находится в шаблоне и для чего его можно использовать</i></small></h2>
   <p>Благодарим Вас за приобретение шаблона Joomla. Данная документация состоит из нескольких частей и охватывает весь процесс установки и настройки веб-сайта Joomla с нуля. Мы сделали все возможное, чтобы это руководство было понятным и удобным в использовании. </p>
   
   <div id="joomla_cms_desc">
@@ -222,7 +222,7 @@
 </section>
 
 <section class="block-templates" id="prepare">  
-  <h2><i class="icon-check"></i> Подготовка <small><i>Что нужно сделать перед началом работы</i></small></h2>
+  <h2 class="item2"><i class="icon-check"></i> Подготовка <small><i>Что нужно сделать перед началом работы</i></small></h2>
   <p>Прежде, чем перейти к установке веб-сайта Joomla, нужно полностью подготовиться. Рекомендуется выполнить следующие подготовительные шаги:</p>
 
   <div id="software">
@@ -253,7 +253,7 @@
 </section>
 
 <section class="block-templates" id="getting_started">  
-  <h2><i class="icon-play"></i> Начало использования <small><i>Куда нажимать, чтобы приступить к работе</i></small></h2>
+  <h2 class="item3"><i class="icon-play"></i> Начало использования <small><i>Куда нажимать, чтобы приступить к работе</i></small></h2>
 
   <div class="row-fluid">
     <div class="span6 text-center img-paraloid">
@@ -543,7 +543,7 @@
 
 
 <section class="block-templates" id="modules_config">
-  <h2><i class="icon-cog"></i> Настройка модулей</h2>
+  <h2 class="item4"><i class="icon-cog"></i> Настройка модулей</h2>
 
     <p>Веб-сайт Joomla состоит из двух основных частей - секция контента и позиции модулей (для более наглядной информации ознакомьтесь с картой позиций модулей). Модуля используются в Joomla чтобы выводить контент в подготовленных позициях.</p>
   <div id="positions_map">
@@ -972,7 +972,7 @@
 
 
 <section id="extensions" class="block-templates">
-  <h2><i class="icon-fullscreen"></i> Расширения</h2>
+  <h2 class="item5"><i class="icon-fullscreen"></i> Расширения</h2>
 
   <p>Функциональность веб-сайта Joomla можно увеличить при помощи различных расширений. Некоторые из них часто используются в наших шаблонах. В данной секции показано, как работать с расширениями.</p>
 
@@ -1122,7 +1122,7 @@
 </section>
 
 <section id="configuring-pages" class="block-templates">
-  <h2><i class="icon-wrench"></i> Настройка страниц</h2>
+  <h2 class="item6"><i class="icon-wrench"></i> Настройка страниц</h2>
   
     <!-- Gallery page -->
   
@@ -1175,7 +1175,7 @@
 
 
 <section id="template-settings">
-  <h2><i class="icon-cogs"></i>Настройка шаблона</h2>
+  <h2 class="item7"><i class="icon-cogs"></i> Настройка шаблона</h2>
 
   <p>Для каждого шаблона Joomla существуют настройки конфигурации. С их помощью можно задавать макет шаблона, оформление, различные дополнительные особенности и т.д. Настройки шаблона находятся в меню  <b>Extensions (Расширения) > Template Manager</b> (Менеджер шаблонов) панели управления Joomla.</p>
 
@@ -1288,7 +1288,7 @@ defined('_JEXEC') or die;
 
 
 <section id="addendum" class="block-templates">
-  <h2><i class="icon-question-sign"></i> Дополнение. Куда обращаться за помощью, поддержкой и дополнительной информацией</h2>
+  <h2 class="item8"><i class="icon-question-sign"></i> Дополнение. <small><i>Куда обращаться за помощью, поддержкой и дополнительной информацией</i></small></h2>
 
   <p>Мы постарались сделать данную документацию как можно более доступной и понятной. Тем не менее, в случае возникновения любых сложностей с Joomla шаблоном, предложений по улучшению шаблонов или документации, с командой технической поддержки можно связаться следующим образом:</p>
   
