--- a/index_tr.html
+++ b/index_tr.html
@@ -1269,7 +1269,7 @@ defined('_JEXEC') or die;
 
 
 <section id="addendum" class="block-templates">
-  <h2 class="item8"><i class="icon-question-sign"></i> Ek  <small>nereden yardım ve destek alabileceğiniz hakkında bilgiler.</small> </h2>
+  <h2 class="item8"><i class="icon-question-sign"></i> Ek  <small><i>nereden yardım ve destek alabileceğiniz hakkında bilgiler.</i></small> </h2>
 
   <p>Biz mümkün olduğu kadar bu belgeleri net olarak oluşturmak için elimizden gelenin en iyisini yaptık. Siz şablon veya belgeleri geliştirme, Joomla Şablonu veya herhangi bir öneri ile herhangi bir zorlukla karşılaştığınız taktirde destek ekibimizle temasa geçmek için çekinmeyin:</p>
   
