add extensions docs

--- a/index_ru.html
+++ b/index_ru.html
@@ -130,6 +130,12 @@
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">TM Ajax Contact Form</a></li>
                           <li><a href="#olark">TM Olark live chat</a></li>
+                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
+                          <li><a href="#twitter_feed">SW Twitter Display</a></li>
+                          <li><a href="#instagram_feed">TM Instagram</a></li>
+                          <li><a href="#social_login">Joomla Social Login</a></li>
+                          <li><a href="#acymailing">Acymailing</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -979,7 +985,7 @@
 
 <!-- ARTICLES NEWSFLASH MODULE -->
   <div id="articles-newsflash">
-    <h3>Articles Newsflash</h3>
+    <h3>Articles Newsflash (Advanced)</h3>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/newsflash-adv-2.jpg" alt=""></figure>
             <p class="muted text-center">Рис 11. Модуль Articles Newsflash (Advanced)</p>
@@ -1121,17 +1127,98 @@
   </div>
 
   <div id="olark">
+
     <h3>Модуль TM Olark live chat</h3>
+
     <div class="img-container"><figure class="img-polaroid"><img src="img/olark.jpg" alt=""></figure>
     <p class="muted text-center">Рис. 25. Модуль TM Olark live chat</p></div>
+
     <p>TM Olark live chat - модуль живого чата для Joomla.</p>
+
     <div class="img-container"><figure class="img-polaroid"><img src="img/olark-2.jpg" alt=""></figure>
     <p class="muted text-center">Рис. 25-1. Настройки модуля TM Olark live chat</p></div>
+
     <p>В основных настройках модуля необходмо указать только идентификатор сайта, который после регистрации и заполнения всех необходимых данных будет указан на странице <a href="https://www.olark.com/install" target="_blank" rel="nofollow">https://www.olark.com/install</a></p>
+
     <div class="img-container"><figure class="img-polaroid"><img src="img/olark-3.jpg" alt=""></figure>
     <p class="muted text-center">Рис. 25-2. Идентификатор сайта в панели управления Olark.</p></div>
+
     <p>Наша компания бесплатно предоставляет вам тарифный план <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Бронзовый"</a> на 6 месяцев. Для регистрации воспользуйтесь <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">этой ссылкой</a>.
 
+  </div>
+
+  <div id="facebook_feed">
+    <h3>SW Facebook Display</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 26. Модуль SW Facebook Display</p></div>
+    <p>SW Facebook Display - модуль для вывода "Facebook Like Box".</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 26-1. Настройки модуля SW Facebook Display</p></div>
+    <p>Так выглядят основные настройки модуля SW Facebook Display. Более детальная информация на <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">официальном сайте</a>.</p>
+  </div>
+
+  <div id="pinterest_feed">
+    <h3>SW Pinterest Display</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-1.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 27. Модуль SW Pinterest Display</p></div>
+    <p>SW Pinterest Display - модуль для вывода "Pinterest Board Widget".</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-2.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 27-1. Настройки модуля SW Pinterest Display</p></div>
+    <p>Так выглядят основные настройки модуля SW Pinterest Display. Более детальная информация на <a href="http://socialwidgets.net/documentation/28-sw-pinterest-display.html" target="_blank" rel="nofollow">официальном сайте</a>.</p>
+  </div>
+
+  <div id="twitter_feed">
+    <h3>SW Twitter Display</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-1.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 28. Модуль SW Twitter Display</p></div>
+    <p>SW Twitter Display - модуль для вывода "Twitter Widget".</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-2.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 28-1. Настройки модуля SW Twitter Display</p></div>
+    <p>Так выглядят основные настройки модуля SW Twitter Display. Более детальная информация на <a href="http://socialwidgets.net/documentation/27-sw-twitter-display.html" target="_blank" rel="nofollow">официальном сайте</a>.</p>
+  </div>
+
+  <div id="instagram_feed">
+    <h3>TM Instagram</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/instagram-1.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 29. Модуль TM Instagram</p></div>
+    <p>TM Instagram - модуль для вывода "Instagram Widget"</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/instagram-2.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 29-1. Настройки модуля TM Instagram</p></div>
+    <p>Так выглядят основные настройки модуля TM Instagram. В поле Instagram username указывается название профиля в Instagram, в поле Number of photos - количество картинок, выводимых в виджете, в поле Your Instagram CLIENT ID указывается идентификатор Вашего приложения Instagram. Чтобы получить идентификатор, перейдите по ссылке <a href="https://instagram.com/accounts/login/?next=%2Fdeveloper%2F" target="_blank" rel="nofollow">https://instagram.com/accounts/login/?next=%2Fdeveloper%2F</a> и зарегистрируйтесь. Далее перейдите по ссылке <a href="http://instagram.com/developer/clients/manage/" target="_blank" rel="nofollow">http://instagram.com/developer/clients/manage/</a> и создайте там приложение. После этого у вас появятся данные Вашего приложения, в которых будет указан идентификатор (CLIENT ID).</p>
+  </div>
+
+  <div id="social_login">
+    <h3>Joomla Social Login</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-1.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 30. Компонент Joomla Social Login</p></div>
+    <p>Joomla Social Login - компонент для вывода кнопок авторизации через социальные сети.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-2.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 30-1. Настройки компонента Joomla Social Login</p></div>
+    <p>Так выглядят основные настройки компонента Joomla Social Login. Более детальная информация на <a href="http://support.loginradius.com/hc/en-us/articles/201968987-Joomla-Social-Login-instructions" target="_blank" rel="nofollow">официальном сайте</a>.</p>
+  </div>
+
+  <div id="acymailing">
+    <h3>Acymailing</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-1.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 31. Компонент Acymailing</p></div>
+    <p>Acymailing - компонент подписки для Joomla!</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-2.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 31-1. Настройки компонента Acymailing</p></div>
+    <p>Так выглядит главная страница компонента Acymailing в админ панели. Более детальная информация на <a href="https://www.acyba.com/acymailing/doc.html" target="_blank" rel="nofollow">официальном сайте</a>.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-3.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 31-2. Настройки модуля Acymailing</p></div>
+    <p>Так выглядит страница настроек модуля Acymailing. Более детальная информация на <a href="https://www.acyba.com/acymailing/62-acymailing-module.html" target="_blank" rel="nofollow">официальном сайте</a>.</p>
+    <p>С компонентом Acymailing также устанавливаются системные плагины plg_acymailing_contentplugin, plg_acymailing_managetext, plg_acymailing_online, plg_acymailing_share, plg_acymailing_stats, plg_acymailing_tablecontents, plg_acymailing_tagcbuser, plg_acymailing_tagcontent, plg_acymailing_tagsubscriber, plg_acymailing_tagsubscription, plg_acymailing_tagtime, plg_acymailing_taguser, plg_acymailing_template, plg_editors_acyeditor, plg_system_regacymailing</p>
+  </div>
+
+  <div id="tmaddthis">
+    <h3>TM Addthis</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/addthis-1.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 32. Плагин TM Addthis</p></div>
+    <p>TM Addthis - плагин для вывода кнопок "поделиться".</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/addthis-2.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 32-1. Настройки модуля TM Addthis</p></div>
+    <p>Так выглядят основные настройки плагина TM Addthis. В поле Profile ID указывается идентификатор профиля, указанный после регистрации и создания профиля на странице <a href="https://www.addthis.com/settings/publisher" target="_blank" rel="nofollow">https://www.addthis.com/settings/publisher</a>.</p>
   </div>
 
 </section>
