--- a/index_ru.html
+++ b/index_ru.html
@@ -136,6 +136,10 @@
                           <li><a href="#instagram_feed">TM Instagram</a></li>
                           <li><a href="#social_login">Joomla Social Login</a></li>
                           <li><a href="#acymailing">Acymailing</a></li>
+                          <li><a href="#tmaddthis">TM Addthis</a></li>
+                          <li><a href="#googlemap">Googlemap plugin</a></li>
+                          <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
+                          <li><a href="#joomgallery">JoomGallery</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -145,7 +149,7 @@
                        <dt><a href="#configuring-pages" class="icon-wrench">Настройка страниц </a> <i class="icon-sample"></i></dt>
                          <dd>
                            <ul class="list">          
-                            <li><a href="#gallery">Галерея</a></li>
+                            <!--<li><a href="#gallery">Галерея</a></li>-->
                             <li><a href="#contacts">Контакты</a></li>                    
                            </ul> 
                        </dd>
@@ -1138,7 +1142,7 @@
     <div class="img-container"><figure class="img-polaroid"><img src="img/olark-2.jpg" alt=""></figure>
     <p class="muted text-center">Рис. 25-1. Настройки модуля TM Olark live chat</p></div>
 
-    <p>В основных настройках модуля необходмо указать только идентификатор сайта, который после регистрации и заполнения всех необходимых данных будет указан на странице <a href="https://www.olark.com/install" target="_blank" rel="nofollow">https://www.olark.com/install</a></p>
+    <p>В основных настройках модуля необходимо указать только идентификатор сайта, который после регистрации и заполнения всех необходимых данных будет указан на странице <a href="https://www.olark.com/install" target="_blank" rel="nofollow">https://www.olark.com/install</a></p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/olark-3.jpg" alt=""></figure>
     <p class="muted text-center">Рис. 25-2. Идентификатор сайта в панели управления Olark.</p></div>
@@ -1221,12 +1225,48 @@
     <p>Так выглядят основные настройки плагина TM Addthis. В поле Profile ID указывается идентификатор профиля, указанный после регистрации и создания профиля на странице <a href="https://www.addthis.com/settings/publisher" target="_blank" rel="nofollow">https://www.addthis.com/settings/publisher</a>.</p>
   </div>
 
+  <div id="googlemap">
+    <h3>Googlemap plugin</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-1.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 33. Плагин Googlemap</p></div>
+    <p>Googlemap - плагин для вывода карты Google.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-2.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 33-1. Настройки плагина Googlemap</p></div>
+    <p>Так выглядит страница описания плагина Googlemap в админ панели. Более детальная информация на <a href="http://tech.reumer.net/Google-Maps/Documentation-of-plugin-Googlemap/" target="_blank" rel="nofollow">официальном сайте</a>.</p>
+  </div>
+
+  <div id="cookies">
+    <h3>Joomla Cookie Directive Plugin</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/cookies-1.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 34. Joomla Cookie Directive Plugin</p></div>
+    <p>Joomla Cookie Directive Plugin - плагин для вывода баннера с сообщением об использовании куки-файлов.</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/cookies-2.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 34-1. Настройки плагина Joomla Cookie Directive Plugin</p></div>
+    <p>Так выглядят основные настройки плагина Joomla Cookie Directive Plugin. Более детальная информация на <a href="http://www.channeldigital.co.uk/resources/joomla-cookie-directive-plugin.html" target="_blank" rel="nofollow">официальном сайте</a>.</p>
+  </div>
+
+  <div id="joomgallery">
+    <h3>JoomGallery</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-1.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 35. JoomGallery, страница галереи</p></div>
+    <p>JoomGallery - компонент для реализации полноценной фотогалереи на базе Joomla!</p>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-2.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 35-1. JoomGallery, страница категории</p></div>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-3.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 35-2. JoomGallery, слайдер</p></div>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-4.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 35-3. JoomGallery, страница  описания картинки</p></div>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 35-4. Настройки компонента JoomGallery</p></div>
+    <p>Так выглядит страница описания компонента JoomGallery. Более детальная информация на <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">официальном сайте</a>. Также для полноценной работы данного компонента дополнительно устанавливается JoomFancybox плагин.</p>
+  </div>
+
 </section>
 
 <section id="configuring-pages" class="block-templates">
   <h2 class="item6"><i class="icon-wrench"></i> Настройка страниц</h2>
   
-    <!-- Gallery page -->
+    <!-- Gallery page
   
     <div id="gallery">
       <h3>Галерея</h3>
@@ -1252,7 +1292,7 @@
       <div class="img-container"><figure class="img-polaroid"><img src="img/pages-gallery-2.jpg" alt=""></figure>
             <p class="muted text-center">Рис 28. Количество колонок страницы галереи</p>
       </div>
-    </div>
+    </div> -->
   
   
     <!-- Contacts page -->
@@ -1266,7 +1306,7 @@
       <p> Карта<b> Google Map</b> на странице контактов задается через плагин  Google Maps. Его можно настроить в  <b>Extensions (Расширения) > Plug-in Manager (Менеджер плагинов) > Google Maps</b></p>
 
       <div class="img-container"><figure class="img-polaroid"><img src="img/plugin-manager.jpg" alt=""></figure>
-            <p class="muted text-center">Рис 29. Менеджер плагинов</p>
+            <p class="muted text-center">Рис 36. Менеджер плагинов</p>
       </div>
 
       <p><span class="label label-success">Подсказка: Для ускорения поиска плагинов можно использовать фильтр, показанный на скриншоте выше</span>.</p>
@@ -1282,7 +1322,7 @@
   <p>Для каждого шаблона Joomla существуют настройки конфигурации. С их помощью можно задавать макет шаблона, оформление, различные дополнительные особенности и т.д. Настройки шаблона находятся в меню  <b>Extensions (Расширения) > Template Manager</b> (Менеджер шаблонов) панели управления Joomla.</p>
 
   <div class="img-container"><figure class="img-polaroid"><img src="img/template-settings-1.jpg" alt=""></figure>
-    <p class="muted text-center">Рис 30. Менеджер шаблонов</p>
+    <p class="muted text-center">Рис 37. Менеджер шаблонов</p>
   </div>
 
   <p>В меню  Template Manager (Менеджер шаблонов) выберите необходимую тему. </p>
@@ -1293,7 +1333,7 @@
     <p>Опции макета позволяют редактировать основные настройки макета темы:</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/template-settings-2.jpg" alt=""></figure>
-    <p class="muted text-center">Рис 31. Опции макета</p></div>
+    <p class="muted text-center">Рис 38. Опции макета</p></div>
 
     <p><b>Theme layout (Макет темы)</b> - позволяет  сделать тему фиксированной  (ширина в пикселях) или относительной (ширина в процентах);</p>
 
@@ -1310,19 +1350,19 @@
     <p>Настройки оформления позволяют выбирать теги для различных типов отображения: избранные статьи, страница категорий, блог, отдельная статья и т.п.. Для заголовков могут использоваться теги HTML  (h1, h2, h3, h4 и др.). Теги меняются в зависимости от логической важности и стиля. <a href="http://www.w3schools.com/tags/tag_hn.asp" target="_blank">Более детальная информация</a> </p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/template-settings-3.jpg" alt=""></figure>
-    <p class="muted text-center">Рис 32. Настройки оформления</p></div>
+    <p class="muted text-center">Рис 39. Настройки оформления</p></div>
   </div>
 
   <div id="background_video">
     <h3>Вставка фонового видео (Background video)</h3>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/video-1.png" alt=""></figure>
-    <p class="muted text-center">Рис 33. Фоновое видео на странице сайта</p></div>
+    <p class="muted text-center">Рис 40. Фоновое видео на странице сайта</p></div>
 
     <p>Для реализации фонового видео в шаблоне используется jQuery-плагин <a href="http://vodkabears.github.io/vide/" target="_blank" rel="nofollow">Vide</a>. Проверьте, подключен ли плагин в шаблоне. Для этого перейдите в "Менеджер шаблонов -> Шаблоны", затем перейдите в используемый шаблон (Theme**** Details and Files) и откройте файл "index.php",  проверьте подключение плагина, оно должно быть таким же, как показано на рис. 29. Также проверьте наличие самого плагина в папке "js". Если плагин отсутствует, скачайте его по ссылке выше и разместите в соответствующей папке, а также подключите его в "index.php".</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/video-4.png" alt=""></figure>
-    <p class="muted text-center">Рис 34. Проверка подключения плагина</p></div>
+    <p class="muted text-center">Рис 41. Проверка подключения плагина</p></div>
 
     <p>Чтобы вставить фоновое видео на страницу, необходимо перейти в "Менеджер шаблонов -> Шаблоны", затем перейти в используемый шаблон (Theme**** Details and Files). Затем необходимо  создать файл "<имя>.php" в директории "html -> mod_custom" с таким содержимым:</p>
 
@@ -1350,12 +1390,12 @@ defined('_JEXEC') or die;
     <p>Также необходимо подготовить видео в форматах mp4, ogv, webm и постер к видео в форматах png, jpg и gif. Имя у всех файлов должно быть одинаковым и соответствовать указанному ранее [имя_файла]. Все подготовленные файлы нужно разместить в директории media\video\ в корневой директории установленной Joomla.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/video-2.png" alt=""></figure>
-    <p class="muted text-center">Рис 35. Содержимое файла переопределения</p></div>
+    <p class="muted text-center">Рис 42. Содержимое файла переопределения</p></div>
 
     <p>Далее необходимо создать модуль для отображения видео. Создаем модуль HTML-код (custom HTML) c содержимым вида:</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/video-3.png" alt=""></figure>
-    <p class="muted text-center">Рис 36. Настройка модуля фонового видео</p></div>
+    <p class="muted text-center">Рис 43. Настройка модуля фонового видео</p></div>
 
     <p>Во вкладке "Дополнительные параметры" ("Advanced") в выпадающем списке "Альтернативный макет" ("Alternative Layout") выбираем созданный ранее макет [имя файла].</p>
 
@@ -1370,7 +1410,7 @@ defined('_JEXEC') or die;
     <p>Чтобы использовать параллакс-эффект на странице, необходимо перейти в "Менеджер шаблонов -> Шаблоны", затем перейти в используемый шаблон (Theme**** Details and Files) и открыть файл "index.php". На соответствующем блоке, например "folio-row", добавьте свойство <pre><code>data-stellar-background-ratio="[значение]"</code></pre> как показано на рис. 32:</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/parallax-1.png" alt=""></figure>
-    <p class="muted text-center">Рис 37. Использование параллакс-эффекта</p></div>
+    <p class="muted text-center">Рис 44. Использование параллакс-эффекта</p></div>
 
     <p>где [значение] - коэффициент относительно естественной скорости скроллинга, более детально можно прочитать в <a href="http://markdalgleish.com/projects/stellar.js/docs/" target="_blank" rel="nofollow">документации</a> к плагину.</p>
 
@@ -1382,7 +1422,7 @@ defined('_JEXEC') or die;
     <p>Позволяет настраивать дополнительные свойства шаблона. </p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/template-settings-4.jpg" alt=""></figure>
-    <p class="muted text-center">Рис 38. Дополнительные свойства</p></div>
+    <p class="muted text-center">Рис 45. Дополнительные свойства</p></div>
 
     <p>Опции<b> To Top button (Кнопка наверх) </b>и<b> ToTop text</b> <strong>(Текст наверх) </strong>включают/выключают кнопку  и текст для кнопки.</p>
   </div>
