add olark description

--- a/index_en.html
+++ b/index_en.html
@@ -129,6 +129,7 @@
                           <li><a href="#komento">Komento</a></li>
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">TM Ajax Contact Form</a></li>
+                          <li><a href="#olark">TM Olark live chat</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1100,6 +1101,19 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
     </div>
 
   </div>
+
+<div id="olark">
+  <h3> TM Olark live chat module</h3> 
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark.jpg" alt=""></figure> 
+  <p class="muted text-center">Image 25. TM Olark live chat module</p></div> 
+  <p>TM Olark is a live chat module for Joomla.</p> 
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark-2.jpg" alt=""></figure> 
+  <p class="muted text-center">Image 25-1. TM Olark live chat module settings</p></div> 
+  <p>In general settings you should add the website identifier which will show up after registration and filling in all the details at <a href="https://www.olark.com/install" target="_blank" rel="nofollow">https://www.olark.com/install</a></p> 
+  <div class="img-container"><figure class="img-polaroid"><img src="img/olark-3.jpg" alt=""></figure> 
+  <p class="muted text-center">Image 25-2. Website indentifier in Olark control panel.</p></div> 
+  <p>Our company provides you with <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronze"</a> 6 months package for free. Use the following <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">link</a> to register.</p>
+</div>
 
 </section>
 
