--- a/index_ru.html
+++ b/index_ru.html
@@ -1147,7 +1147,7 @@
     <div class="img-container"><figure class="img-polaroid"><img src="img/olark-3.jpg" alt=""></figure>
     <p class="muted text-center">Рис. 25-2. Идентификатор сайта в панели управления Olark.</p></div>
 
-    <p>Наша компания бесплатно предоставляет вам тарифный план <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Бронзовый"</a> на 6 месяцев. Для регистрации воспользуйтесь <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">этой ссылкой</a>.
+    <p>Наша компания бесплатно предоставляет вам тарифный план <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Бронзовый"</a> на 6 месяцев. Для регистрации воспользуйтесь <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">этой ссылкой</a>.</p>
 
   </div>
 
