--- a/index_en.html
+++ b/index_en.html
@@ -130,6 +130,16 @@
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">TM Ajax Contact Form</a></li>
                           <li><a href="#olark">TM Olark live chat</a></li>
+                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
+                          <li><a href="#twitter_feed">SW Twitter Display</a></li>
+                          <li><a href="#instagram_feed">TM Instagram</a></li>
+                          <li><a href="#social_login">Joomla Social Login</a></li>
+                          <li><a href="#acymailing">Acymailing</a></li>
+                          <li><a href="#tmaddthis">TM Addthis</a></li>
+                          <li><a href="#googlemap">Googlemap plugin</a></li>
+                          <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
+                          <li><a href="#joomgallery">JoomGallery</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -139,7 +149,7 @@
                        <dt><a href="#configuring-pages" class="icon-wrench">Configuring Pages </a> <i class="icon-sample"></i></dt>
                          <dd>
                            <ul class="list">          
-                            <li><a href="#gallery">Gallery</a></li>
+                            <!--<li><a href="#gallery">Gallery</a></li>-->
                             <li><a href="#contacts">Contacts</a></li>                    
                            </ul> 
                        </dd>
@@ -1115,12 +1125,139 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
   <p>Our company provides you with <a href="https://www.olark.com/pricing" target="_blank" rel="nofollow">"Bronze"</a> 6 months package for free. Use the following <a href="https://www.olark.com/signup/create_new_account/18981?utm_source=templatemonster&utm_medium=offer&utm_campaign=default" target="_blank" rel="nofollow">link</a> to register.</p>
 </div>
 
+<div id="facebook_feed">
+<h3>SW Facebook Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 26. SW Facebook Display module</p></div>
+<p>SW Facebook Display - module that allows to display "Facebook Like Box".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 26-1. SW Facebook Display module settings</p></div>
+<p>Here you can see the main SW Facebook Display settings. Feel free to check more details at the <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">official website</a>.</p>
+</div>
+
+<div id="pinterest_feed">
+<h3>SW Pinterest Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 27. SW Pinterest Display module</p></div>
+<p>SW Pinterest Display - module that allows to display "Pinterest Board Widget".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/pinterest_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 27-1. SW Pinterest Display module settings</p></div>
+<p>Here you can see the main SW Pinterest Display settings. Feel free to check more details at the <a href="http://socialwidgets.net/documentation/28-sw-pinterest-display.html" target="_blank" rel="nofollow">official website</a>.</p>
+</div>
+
+<div id="twitter_feed">
+<h3>SW Twitter Display</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 28. SW Twitter Display module</p></div>
+<p>SW Twitter Display - module that allows to display "Twitter Widget".</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/twitter_feed-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 28-1. SW Twitter Display module settings</p></div>
+<p>Here you can see the main SW Twitter Display settings. Feel free to check more details at the <a href="http://socialwidgets.net/documentation/27-sw-twitter-display.html" target="_blank" rel="nofollow">official website</a>.</p>
+</div>
+
+<div id="instagram_feed">
+<h3>TM Instagram</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 29.  TM Instagram module</p></div>
+<p>TM Instagram -  module that allows to display "Instagram Widget"</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/instagram-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 29-1.TM Instagram module settings</p></div>
+<p>Here you can see the main TM Instagram settings. Enter the Instagram profile name in the Instagram username field, enter the desired number of images in the Number of photos field, set the ID of your Instagram application in the the field called Your Instagram CLIENT ID. In order to get the ID, follow the link <a href="https://instagram.com/accounts/login/?next=%2Fdeveloper%2F" target="_blank" rel="nofollow">https://instagram.com/accounts/login/?next=%2Fdeveloper%2F</a> where you need to register an account. Then, follow this link <a href="http://instagram.com/developer/clients/manage/" target="_blank" rel="nofollow">http://instagram.com/developer/clients/manage/</a> and create the application. After that you will get your applications data where you will see the CLIENT ID.</p>
+</div>
+
+<div id="social_login">
+<h3>Joomla Social Login</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 30. Joomla Social Login component</p></div>
+<p>Joomla Social Login - component that allows to display login buttons to the social network accounts.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/sociallogin-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 30-1. Joomla Social Login settings</p></div>
+<p>Here you can see the main Joomla Social Login settings. Feel free to check more details at the <a href="http://support.loginradius.com/hc/en-us/articles/201968987-Joomla-Social-Login-instructions" target="_blank" rel="nofollow">official website</a>.</p>
+</div>
+
+<div id="acymailing">
+<h3>Acymailing</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31. Acymailing component</p></div>
+<p>Acymailing - the subscription component for Joomla!</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31-1. Acymailing settings</p></div>
+<p>Here is the main page of Acymailing component in the admin panel. Feel free to check more details at the <a href="https://www.acyba.com/acymailing/doc.html" target="_blank" rel="nofollow">official website</a>.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/acymailing-3.jpg" alt=""></figure>
+<p class="muted text-center">Img. 31-2.  Acymailing settings</p></div>
+<p>This is the settings page of Acymailing module. Feel free to check more details at the <a href="https://www.acyba.com/acymailing/62-acymailing-module.html" target="_blank" rel="nofollow">official website</a>.</p>
+<p>This is the list of the system plugins that are getting installed together with Acymailing component:</p>
+<ul>
+<li>plg_acymailing_contentplugin</li>
+<li>plg_acymailing_managetext</li>
+<li>plg_acymailing_online</li>
+<li>plg_acymailing_share</li>
+<li>plg_acymailing_stats</li>
+<li>plg_acymailing_tablecontents</li>
+<li>plg_acymailing_tagcbuser</li>
+<li>plg_acymailing_tagcontent</li>
+<li>plg_acymailing_tagsubscriber</li>
+<li>plg_acymailing_tagsubscription</li>
+<li>plg_acymailing_tagtime</li>
+<li>plg_acymailing_taguser</li>
+<li>plg_acymailing_template</li>
+<li>plg_editors_acyeditor</li>
+<li>plg_system_regacymailing</li>
+</ul>
+</div>
+
+<div id="tmaddthis">
+<h3>TM Addthis</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 32. TM Addthis plugin</p></div>
+<p>TM Addthis - plugins that allows to display social 'share' buttons .</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/addthis-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 32-1. TM Addthis settings</p></div>
+<p>Here you can see the main settings of TM Addthis plugin. Enter the ID of your profile in the profile ID field. In order to get the profile ID, you need to register an account and create the profile at the following page <a href="https://www.addthis.com/settings/publisher" target="_blank" rel="nofollow">https://www.addthis.com/settings/publisher</a>.</p>
+</div>
+
+<div id="googlemap">
+<h3>Googlemap plugin</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 33. Googlemap plugin</p></div>
+<p>Googlemap - plugin that allows to display Google map.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/googlemap-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 33-1. Googlemap settings</p></div>
+<p>Here is the main page of Googlemap plugin in the admin panel.  Feel free to check more details at the <a href="http://tech.reumer.net/Google-Maps/Documentation-of-plugin-Googlemap/" target="_blank" rel="nofollow">official website</a>.</p>
+</div>
+
+<div id="cookies">
+<h3>Joomla Cookie Directive Plugin</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 34. Joomla Cookie Directive Plugin</p></div>
+<p>Joomla Cookie Directive Plugin - plugin that allows to display a banner containing a message about using cookies.</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/cookies-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 34-1. Joomla Cookie Directive Plugin settings</p></div>
+<p>Here you can see the main Joomla Cookie Directive Plugin settings.  Feel free to check more details at the <a href="http://www.channeldigital.co.uk/resources/joomla-cookie-directive-plugin.html" target="_blank" rel="nofollow">official website</a>.</p>
+</div>
+
+<div id="joomgallery">
+<h3>JoomGallery</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-1.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35. JoomGallery, gallery page</p></div>
+<p>JoomGallery - component that allows to create a complete photopallery based on Joomla!</p>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-2.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-1. JoomGallery, category page</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-3.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-2. JoomGallery, slider</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-4.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-3. JoomGallery, image description page</p></div>
+<div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
+<p class="muted text-center">Img. 35-4. JoomGallery settings</p></div>
+<p>Here is  the main page of JoomGallery component.  Feel free to check more details at the <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">official website</a>. In addition, there is a JoomFancybox plugin that has to be installed in order to work with the component.</p>
+</div>
+
 </section>
 
 <section id="configuring-pages" class="block-templates">
   <h2 class="item6"><i class="icon-wrench"></i> Configuring Pages</h2>
   
-    <!-- Gallery page -->
+    <!-- Gallery page
   
     <div id="gallery">
       <h3>Gallery Page</h3>
@@ -1141,7 +1278,7 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
                 
       <div class="img-container"><figure class="img-polaroid"><img src="img/pages-gallery-2.jpg" alt=""></figure>
             <p class="muted text-center">Img 25. Number of columns for the Gallery page</p></div>
-    </div>
+    </div> -->
   
   
     <!-- Contacts page -->
